linkedlist -> arraylist